[package]
name = "procedural-engines-wasm"
version = "0.1.0"
edition = "2024"
description = "Procedural engines (boids, topography) compiled to WASM"
license = "MIT"
repository = "https://github.com/SebaNLee/procedural-engines"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

# engines
boids-engine = {path = "../engines/boids-engine"}
topography-engine = {path = "../engines/topography-engine"}